# wellally-schemas

./: .gitignore  README.md  README.zh.md
archive/: COMPLETION_REPORT.md  FINAL_STATUS.py  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.py  README.md  README.zh.md  setup_dev.sh
archive/wellally-anomaly-flagger/: README.md  README.zh.md
archive/wellally-anomaly-flagger/language/python/: README.md  examples.py  pyproject.toml
archive/wellally-anomaly-flagger/language/python/wellally_anomaly_flagger/: __init__.py  flagger.py
archive/wellally-consent-model/: README.md  README.zh.md
archive/wellally-consent-model/language/python/: README.md  examples.py  pyproject.toml
archive/wellally-consent-model/language/python/wellally_consent_model/: __init__.py  consent.py
archive/wellally-data-correlation/: README.md  README.zh.md
archive/wellally-data-correlation/language/python/: README.md  examples.py  pyproject.toml
archive/wellally-data-correlation/language/python/wellally_data_correlation/: __init__.py  correlation.py
archive/wellally-fhir-lite/: LICENSE  README.md  README.zh.md
archive/wellally-fhir-lite/language/python/: README.md  examples.py  pyproject.toml
archive/wellally-fhir-lite/language/python/wellally_fhir_lite/: __init__.py  mapper.py
archive/wellally-health-audit-log/: README.md  README.zh.md
archive/wellally-health-audit-log/language/python/: README.md  examples.py  pyproject.toml
archive/wellally-health-audit-log/language/python/wellally_health_audit_log/: __init__.py  audit.py
archive/wellally-health-data-anonymizer/: README.md  README.zh.md
archive/wellally-health-data-anonymizer/language/python/: README.md  examples.py  pyproject.toml
archive/wellally-health-data-anonymizer/language/python/wellally_health_data_anonymizer/: __init__.py  anonymizer.py
archive/wellally-healthkit-mapper/: README.md  README.zh.md
archive/wellally-healthkit-mapper/language/python/: README.md  examples.py  pyproject.toml
archive/wellally-healthkit-mapper/language/python/wellally_healthkit_mapper/: __init__.py  mapper.py  types.py
archive/wellally-lab-parser/: README.md  README.zh.md
archive/wellally-lab-parser/language/python/: .env.example  README.md  examples.py  pyproject.toml
archive/wellally-lab-parser/language/python/wellally_lab_parser/: __init__.py  parser.py  prompts.py
archive/wellally-medical-timeline/: README.md  README.zh.md
archive/wellally-medical-timeline/language/python/: README.md  examples.py  pyproject.toml
archive/wellally-medical-timeline/language/python/wellally_medical_timeline/: __init__.py  timeline.py
archive/wellally-pdf-medical-parser/: README.md  README.zh.md
archive/wellally-pdf-medical-parser/language/python/: README.md  examples.py  pyproject.toml
archive/wellally-pdf-medical-parser/language/python/wellally_pdf_medical_parser/: __init__.py  parser.py  prompts.py
archive/wellally-radiation-dose-calc/: README.md  README.zh.md
archive/wellally-radiation-dose-calc/language/python/: README.md  examples.py  pyproject.toml
archive/wellally-report-structurer-ai/: README.md  README.zh.md
archive/wellally-report-structurer-ai/language/python/: README.md  examples.py  pyproject.toml
archive/wellally-trend-detector/: README.md  README.zh.md
archive/wellally-trend-detector/language/python/: README.md  examples.py  pyproject.toml
archive/wellally-trend-detector/language/python/wellally_trend_detector/: __init__.py  detector.py
archive/wellally-unit-normalizer/: LICENSE  README.md  README.zh.md
archive/wellally-unit-normalizer/language/python/: README.md  examples.py  pyproject.toml
infrastructure/: README.md  README.zh.md
infrastructure/schemas/_common/: defs.json
infrastructure/schemas/family-health/: README.md  README.zh.md
infrastructure/schemas/family-health/examples/: family-tree.min.json
infrastructure/schemas/family-health/schema/: family-health.schema.json
infrastructure/schemas/health/: .gitignore  README.md  README.zh.md
infrastructure/schemas/health/examples/: person.min.json
infrastructure/schemas/health/schema/: health.schema.json
infrastructure/schemas/imaging-report/: README.md  README.zh.md
infrastructure/schemas/imaging-report/examples/: imaging-report.ct-chest.json  imaging-report.ct-kidney.json  imaging-report.us-abdomen.json
infrastructure/schemas/imaging-report/schema/: imaging-report.schema.json
infrastructure/schemas/lab-report/: README.md  README.zh.md
infrastructure/schemas/lab-report/examples/: lab-report.ana-pattern.json  lab-report.ana-patterns-extended.json  lab-report.autoimmune-ana-complement.json  lab-report.beta2-microglobulin.json  lab-report.cbc.json  lab-report.complement-activity.json  lab-report.complement-function-pathways.json  lab-report.dsdna-methods.json  lab-report.endocrine-hormones.json  lab-report.inflammation-immunity.json  lab-report.lipid-panel.json  lab-report.thyroid-panel.json  lab-report.tumor-cyfra-methods.json  lab-report.tumor-markers-advanced.json  lab-report.tumor-markers.json
infrastructure/schemas/lab-report/schema/: lab-report.schema.json
infrastructure/schemas/medication/: README.md  README.zh.md
infrastructure/schemas/medication/examples/: medication.amoxicillin.json  medication.atorvastatin.json  medication.lisinopril.json  medication.metformin.json
infrastructure/schemas/medication/schema/: medication.schema.json
infrastructure/scripts/: validate_examples.py
infrastructure/specs/health-json-spec/: README.md  README.zh.md  spec-v0.1.0.md
language/go/: README.md  common.go  doc.go  family_health.go  go.mod  health.go  imaging_report.go  lab_report.go  medication.go  models.go
language/java/: README.md  pom.xml
language/node/: README.md  index.ts  package.json
language/node/src/: common.ts  family-health.ts  health.ts  imaging-report.ts  index.ts  lab-report.ts  medication.ts
language/python/: models.py
language/rust/: Cargo.toml  README.md
language/rust/src/: common.rs  family_health.rs  health.rs  imaging_report.rs  lab_report.rs  lib.rs  medication.rs
(+15 files in other folders)
