[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wellally-data-correlation"
version = "0.1.0"
description = "Correlation exploration between metrics and behaviors"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "WellAlly Team", email = "huifer97@163.com"}
]
keywords = ["health", "healthcare", "correlation", "analytics", "metrics", "medical"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://www.wellally.tech/"
Documentation = "https://www.wellally.tech/blog"
Repository = "https://github.com/huifer/wellally-schemas"
"Bug Reports" = "https://github.com/huifer/wellally-schemas/issues"

[tool.setuptools]
packages = ["wellally_data_correlation"]

[tool.setuptools.package-data]
wellally_data_correlation = ["py.typed"]
