[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wellally-health-audit-log"
version = "0.1.0"
description = "Tamper-resistant access logging for compliance evidence"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "WellAlly Team", email = "huifer97@163.com"}
]
keywords = ["health", "healthcare", "audit", "logging", "compliance", "medical"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://www.wellally.tech/"
Documentation = "https://www.wellally.tech/blog"
Repository = "https://github.com/huifer/wellally-schemas"
"Bug Reports" = "https://github.com/huifer/wellally-schemas/issues"

[tool.setuptools]
packages = ["wellally_health_audit_log"]

[tool.setuptools.package-data]
wellally_health_audit_log = ["py.typed"]
