[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wellally-lab-parser"
version = "0.1.0"
description = "OCR lab slips to structured JSON for WellAlly platform"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "WellAlly Team", email = "huifer97@163.com"}
]
keywords = ["health", "healthcare", "lab", "ocr", "parser", "medical"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "openai>=1.0.0",
    "wellally>=0.1.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://www.wellally.tech/"
Documentation = "https://www.wellally.tech/blog"
Repository = "https://github.com/huifer/wellally-schemas"
"Bug Reports" = "https://github.com/huifer/wellally-schemas/issues"

[tool.setuptools]
packages = ["wellally_lab_parser"]

[tool.setuptools.package-data]
wellally_lab_parser = ["py.typed"]
